--- a/Templates/student-dashboard.html
+++ b/Templates/student-dashboard.html
@@ -326,7 +326,7 @@
 
         function logout() {
             if(confirm('Are you sure you want to logout?')) {
-                window.location.href = 'login.html';
+                window.location.href = 'index.html';
             }
         }
 
