--- a/Templates/admin-dashboard.html
+++ b/Templates/admin-dashboard.html
@@ -369,7 +369,7 @@
 
         function handleLogout() {
             if (confirm('Are you sure you want to logout?')) {
-                console.log('Logging out...');
+                window.location.href = 'index.html';
             }
         }
 
