--- a/Templates/Register.html
+++ b/Templates/Register.html
@@ -151,7 +151,7 @@
     </style>
 </head>
 <body>
-    <a href="login.html" class="back-button">← Back to Login</a>
+    <a href="index.html" class="back-button">← Back to Login</a>
     
     <div class="register-container">
         <div class="register-header">
@@ -176,7 +176,7 @@
         </form>
 
         <p id="errorMessage" class="error-message">Registration failed. Please try again.</p>
-        <p id="successMessage" class="success-message">Registration successful! You can now <a href="login.html">login</a>.</p>
+        <p id="successMessage" class="success-message">Registration successful! You can now <a href="index.html">login</a>.</p>
     </div>
 
     <script>
